<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="8dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/txtDividend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" / "
            android:textSize="22sp"
            />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" = "
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="1"
            android:text="…"
            android:textSize="22sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnCrash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCrashClick"
        android:text="@string/btnCrash"
        />

    <Button
        android:id="@+id/btnBackgroundCrash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBackgroundCrashClick"
        android:text="@string/btnBackgroundCrash"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNextClick"
        android:text="@string/btnNext"
        />

</LinearLayout>